Replace ViennaSparkleDelegate with AppController category
No need for a separate object in memory. Setting the delegate itself can be done in IB.

--- a/Interfaces/Base.lproj/MainMenu.xib
+++ b/Interfaces/Base.lproj/MainMenu.xib
@@ -877,6 +877,10 @@ CA
                 <outlet property="sortByMenu" destination="387" id="1054"/>
             </connections>
         </customObject>
-        <customObject id="1175" userLabel="SUUpdater" customClass="SUUpdater"/>
+        <customObject id="1175" userLabel="Sparkle" customClass="SUUpdater">
+            <connections>
+                <outlet property="delegate" destination="233" id="RcS-xf-Kv5"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
